--- a/RMS.BLL/RMS.BLL.csproj
+++ b/RMS.BLL/RMS.BLL.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DivisionManager.cs" />
     <Compile Include="EmployeeManager.cs" />
     <Compile Include="FeedbackManager.cs" />
+    <Compile Include="NotificationManager.cs" />
     <Compile Include="OrganizationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequisitionManager.cs" />
