--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -100,6 +100,7 @@
     <Compile Include="EntityModels\Identity\AppUserClaim.cs" />
     <Compile Include="EntityModels\Identity\AppUserLogin.cs" />
     <Compile Include="EntityModels\Identity\AppUserRole.cs" />
+    <Compile Include="EntityModels\MailService.cs" />
     <Compile Include="EntityModels\Notification.cs" />
     <Compile Include="EntityModels\Organization.cs" />
     <Compile Include="EntityModels\Requisition.cs" />
@@ -254,6 +255,10 @@
     <Compile Include="Migrations\201809210908398_RequisitionType Added in Requisition Model.Designer.cs">
       <DependentUpon>201809210908398_RequisitionType Added in Requisition Model.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809220834132_Mail_Service_Model_Added.cs" />
+    <Compile Include="Migrations\201809220834132_Mail_Service_Model_Added.Designer.cs">
+      <DependentUpon>201809220834132_Mail_Service_Model_Added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\RequisitionSummaryReportVM.cs" />
@@ -366,6 +371,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809210908398_RequisitionType Added in Requisition Model.resx">
       <DependentUpon>201809210908398_RequisitionType Added in Requisition Model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809220834132_Mail_Service_Model_Added.resx">
+      <DependentUpon>201809220834132_Mail_Service_Model_Added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
