mail service added in controller queue

--- a/RMS.App/Web.config
+++ b/RMS.App/Web.config
@@ -85,4 +85,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
+<!--<system.net>
+  <mailSettings>
+    <smtp>
+      <network host="smtp.gmail.com" port="587" userName="demowork9999@gmail.com" password="~Aa123456" enableSsl="true"/>
+    </smtp>
+  </mailSettings>
+</system.net>-->
 </configuration>
