Assign Report Done

--- a/RMS.App/Web.config
+++ b/RMS.App/Web.config
@@ -11,15 +11,15 @@
   
   <!--parvaz Connection string-->
   
-  <!--<connectionStrings>
+  <connectionStrings>
     <add name="RmsDbContext" connectionString="Server=DESKTOP-PQILVIV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  </connectionStrings>
   
   <!--Chitto Connection string-->
     
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="RmsDbContext" connectionString="Server=DESKTOP-3R4FBBV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -33,7 +33,9 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  </system.web>
+  <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false" />
+    </httpHandlers></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -78,7 +80,9 @@
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
-  </system.webServer>
+  <handlers>
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    </handlers></system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
