--- a/RMS.App/packages.config
+++ b/RMS.App/packages.config
@@ -32,11 +32,13 @@
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Moment.js" version="2.9.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="ReportViewerForMvc" version="1.1.1" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
