--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -93,6 +93,7 @@
     <Compile Include="EntityModels\District.cs" />
     <Compile Include="EntityModels\Division.cs" />
     <Compile Include="EntityModels\Employee.cs" />
+    <Compile Include="EntityModels\EmployeeImage.cs" />
     <Compile Include="EntityModels\EmployeeType.cs" />
     <Compile Include="EntityModels\Feedback.cs" />
     <Compile Include="EntityModels\Identity\AppRole.cs" />
@@ -267,6 +268,10 @@
     <Compile Include="Migrations\201809220855061_DepartmentCodeInModelNullable.Designer.cs">
       <DependentUpon>201809220855061_DepartmentCodeInModelNullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809260653254_EmployImage_class_added_And_FK_Relation_with_Employee.cs" />
+    <Compile Include="Migrations\201809260653254_EmployImage_class_added_And_FK_Relation_with_Employee.Designer.cs">
+      <DependentUpon>201809260653254_EmployImage_class_added_And_FK_Relation_with_Employee.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\AssignRequisitionReportVM.cs" />
@@ -388,6 +393,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809220855061_DepartmentCodeInModelNullable.resx">
       <DependentUpon>201809220855061_DepartmentCodeInModelNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809260653254_EmployImage_class_added_And_FK_Relation_with_Employee.resx">
+      <DependentUpon>201809260653254_EmployImage_class_added_And_FK_Relation_with_Employee.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
