--- a/RMS.BLL.Contracts/RMS.BLL.Contracts.csproj
+++ b/RMS.BLL.Contracts/RMS.BLL.Contracts.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="IAddressManager.cs" />
     <Compile Include="IAssignRequisitionManager.cs" />
+    <Compile Include="ICancelRequisitionManager.cs" />
     <Compile Include="IContactManager.cs" />
     <Compile Include="IDepartmentManager.cs" />
     <Compile Include="IDesignationManager.cs" />
