--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -88,6 +88,7 @@
     <Compile Include="DatabaseContext\RmsDbContext.cs" />
     <Compile Include="EntityModels\Address.cs" />
     <Compile Include="EntityModels\AssignRequisition.cs" />
+    <Compile Include="EntityModels\CancelRequisition.cs" />
     <Compile Include="EntityModels\ContactModel.cs" />
     <Compile Include="EntityModels\Department.cs" />
     <Compile Include="EntityModels\Designation.cs" />
@@ -277,6 +278,10 @@
     <Compile Include="Migrations\201809270853489_ContactModelAdded.Designer.cs">
       <DependentUpon>201809270853489_ContactModelAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809291018543_CancelRequisitionModelAdded.cs" />
+    <Compile Include="Migrations\201809291018543_CancelRequisitionModelAdded.Designer.cs">
+      <DependentUpon>201809291018543_CancelRequisitionModelAdded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\AssignRequisitionReportVM.cs" />
@@ -404,6 +409,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809270853489_ContactModelAdded.resx">
       <DependentUpon>201809270853489_ContactModelAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809291018543_CancelRequisitionModelAdded.resx">
+      <DependentUpon>201809291018543_CancelRequisitionModelAdded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
