--- a/RMS.App/Web.config
+++ b/RMS.App/Web.config
@@ -11,15 +11,15 @@
   
   <!--parvaz Connection string-->
   
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="RmsDbContext" connectionString="Server=DESKTOP-PQILVIV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  </connectionStrings>-->
   
   <!--Chitto Connection string-->
     
-  <!--<connectionStrings>
+  <connectionStrings>
     <add name="RmsDbContext" connectionString="Server=DESKTOP-3R4FBBV; Database=RMSDb; Integrated Security=true" providerName="System.Data.SqlClient" />
-  </connectionStrings>-->
+  </connectionStrings>
   
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -65,6 +65,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
