--- a/RMS.Models/RMS.Models.csproj
+++ b/RMS.Models/RMS.Models.csproj
@@ -286,6 +286,10 @@
     <Compile Include="Migrations\201809300908481_Feedback Model added Employee Id.Designer.cs">
       <DependentUpon>201809300908481_Feedback Model added Employee Id.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810010859307_Notification_table_changed.cs" />
+    <Compile Include="Migrations\201810010859307_Notification_table_changed.Designer.cs">
+      <DependentUpon>201810010859307_Notification_table_changed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Report\AssignRequisitionReportVM.cs" />
@@ -419,6 +423,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809300908481_Feedback Model added Employee Id.resx">
       <DependentUpon>201809300908481_Feedback Model added Employee Id.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810010859307_Notification_table_changed.resx">
+      <DependentUpon>201810010859307_Notification_table_changed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
