Assign Requisition Calendar

--- a/RMS.App/RMS.App.csproj
+++ b/RMS.App/RMS.App.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Controllers\RequisitionsController.cs" />
     <Compile Include="Controllers\RequisitionStatusController.cs" />
     <Compile Include="Controllers\QueueController.cs" />
+    <Compile Include="Controllers\ScheduleController.cs" />
     <Compile Include="Controllers\VehiclesController.cs" />
     <Compile Include="Controllers\VehicleTypesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -1057,6 +1058,7 @@
     <Content Include="Views\CancelRequisition\Edit.cshtml" />
     <Content Include="Views\CancelRequisition\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutSetupAll.cshtml" />
+    <Content Include="Views\Schedule\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
