--- a/RMS.Repositories/RMS.Repositories.csproj
+++ b/RMS.Repositories/RMS.Repositories.csproj
@@ -73,6 +73,7 @@
     <Compile Include="NotificationRepository.cs" />
     <Compile Include="OrganizationRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequisitionHistoryRepository.cs" />
     <Compile Include="RequisitionRepository.cs" />
     <Compile Include="RequisitionStatusRepository.cs" />
     <Compile Include="UpazilaRepository.cs" />
